--- a/TicTacToeTcpIpReceiver/TicTacToeTcpIpReceiver.csproj
+++ b/TicTacToeTcpIpReceiver/TicTacToeTcpIpReceiver.csproj
@@ -9,6 +9,9 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="SkiaSharp" Version="2.88.7" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.7" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.7" />
   </ItemGroup>
 
 </Project>
